syntax = "proto3";
package chat;

message ResponseNode{
    int64 cantidad1 = 1;
    int64 cantidad2 = 2;
    int64 cantidad3 = 3;
}

message MessageNode{
    int64 cantidad1 = 1;
    int64 cantidad2 = 2;
    int64 cantidad3 = 3;
}

service ChatService2{
    rpc Propuesta(MessageNode) returns (ResponseNode){}
}

